# wetlands_ml_atwell

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DEEP_ANALYSIS_REPORT.md  FIX_COMPLETE.md  INFERENCE_FIX_SUMMARY.md  README.md  RECOMMENDED_FIXES.md  pyproject.toml  pytest.ini  requirements.txt  sentinel2_processing.py  setup.bat  test_unet.py  train_unet.py  validate_seasonal_pixels.py
.claude/: settings.local.json
docs/: false_negative_handling_investigation.md  pipeline_overview.md  refactoring-plan-2025-11-09.md  repository_guidelines.md  topography_module_design.md
docs/architecture/refactoring/: phase3_4_completion.md  wetlands-comprehensive-refactor-plan-2025-12-02.md  wetlands-pipeline-refactor-plan-2025-11-14.md
documentation/refactoring/: ideal-architecture-proposal-2025-12-02.md  wetlands-ml-refactor-plan-2025-12-02.md
notebooks/: wetlands_workflow.ipynb
scripts/windows/: run_full_pipeline.bat  run_sentinel2_processing.bat  run_test_unet.bat  run_train_unet.bat  run_validate.bat
src/wetlands_ml_atwell/: __init__.py  normalization.py  test_unet.py  tiling.py  train_unet.py
src/wetlands_ml_atwell/config/: __init__.py  cli.py  models.py  yaml_loader.py
src/wetlands_ml_atwell/inference/: __init__.py  common.py  unet_stream.py
src/wetlands_ml_atwell/sentinel2/: __init__.py  aoi.py  cli.py  cloud_masking.py  compositing.py  manifests.py  naip.py  parallel_fetch.py  seasonal.py  stac_client.py
src/wetlands_ml_atwell/services/: __init__.py  download.py
src/wetlands_ml_atwell/topography/: config.py  pipeline.py  processing.py
src/wetlands_ml_atwell/training/: __init__.py  sampling.py  unet.py
src/wetlands_ml_geoai/: stacking.py  test_unet.py  tiling.py  train_unet.py
src/wetlands_ml_geoai/config/: __init__.py  cli.py  models.py  yaml_loader.py
src/wetlands_ml_geoai/inference/: unet_stream.py
src/wetlands_ml_geoai/sentinel2/: cloud_masking.py  compositing.py  seasonal.py
src/wetlands_ml_geoai/services/: download.py
src/wetlands_ml_geoai/topography/: pipeline.py  processing.py
src/wetlands_ml_geoai/training/: extraction.py  sampling.py  unet.py
tests/: conftest.py  test_inference_cli.py  test_topography_pipeline.py  test_training_cli.py
tests/experimental/: aoi.gpkg  test_negative_sampling.py
tests/experimental/output/: generated_safe_negatives.gpkg  synthetic_aoi.gpkg  synthetic_atwell.gpkg  synthetic_nwi.gpkg  tiles_negative.gpkg  tiles_positive.gpkg
tests/integration/: test_cli_smoke.py  test_fixtures.py  test_naip_per_polygon.py  test_pipeline_wiring.py  test_sentinel2_smoke.py
tests/unit/: test_aoi.py  test_cloud_masking.py  test_compositing.py  test_config.py  test_naip.py  test_normalization.py  test_seasonal.py  test_services.py  test_stac_client.py
tools/: create_challenge_subset.py  debug_inference_single.py  naip_download.py
